@@ -263,7 +263,7 @@ LISPFUNN(proclaim,1)
 LISPFUNN(eval,1)
 LISPFUN(evalhook,3,1,norest,nokey,0,NIL)
 LISPFUN(applyhook,4,1,norest,nokey,0,NIL)
-LISPFUNN(constantp,1)
+LISPFUN(constantp,1,1,norest,nokey,0,NIL)
 LISPFUNN(function_name_p,1)
 LISPFUN(parse_body,1,2,norest,nokey,0,NIL)
 LISPFUNN(keyword_test,2)
